frontend/src/Components/DrawerInfo.module.css
* {
    margin: 0;
    padding: 0 
}

a:hover {
    cursor: pointer;
}

.topPad {
    margin-top: 5px;
}

.title {
    font-weight: bold;
}

.small {
    font-size: 14px;
}

.drawerContainer{
    margin: 16px;
}

.profile{
    padding-bottom: 16px;
}

.connections{
    padding-top: 16px;
    padding-bottom: 16px;
    display: flex;
    gap: 12px;
}

.gridContainer {
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: 20px;
    padding-top: 16px;
    padding-bottom: 16px;
}

.gridContainerBioSummary {
    display: grid;
    grid-template-columns: 1fr auto 1fr; /* Adjusted for a divider between two columns */
    gap: 10px;
    padding-top: 16px;
    padding-bottom: 16px;
  }

.description {
    max-height: 95px;
    /* width: 324px; */
    overflow: hidden;
    /* text-overflow: ellipsis; */
    /* transition: max-height 0.3s ease-in-out; */
}

.description:hover {
    max-height: none;
}

